<resources>
    <string name="app_name">GRibyAndRasteniyaMap</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_is_empty">Gallery is empty</string>
    <string name="items_removed_message">%d items removed</string>
    <string name="selected_panel_text">Selected: %d</string>
    <string name="kingdomType_no">Not selected</string>
    <string name="kingdomType_mushrooms">Mushrooms</string>
    <string name="kingdomType_plants">Plants</string>
    <string name="title_activity_map">Map</string>
    <string name="camera">Camera</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="type">Type</string>
    <string name="onlyLocal">Only local data</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="enterName">Enter a name</string>
    <string name="enterDescription">Enter a description</string>
    <string name="longitude">Longitude :</string>
    <string name="zero">0</string>
    <string name="latitude">Latitude :</string>
    <string name="save">Save</string>
    <string name="enterUserName">Enter your name:</string>
    <string name="camera_error">An error occurred while working with the camera</string>
    <string name="gpsOn">GPS is ON</string>
    <string name="saved">Saved</string>
    <string name="gpsRequired">GPS is required to be turned on</string>
    <string name="phDescrError">An error occurred while loading</string>
    <string name="settings">Settings</string>
    <string name="change_name">Change your name</string>
    <string name="settings_scheduler">Automatic synchronization</string>
    <string name="settings_sync">Automatically synchronize data with the server</string>
    <string name="settings_force_sync">Forced synchronization</string>
    <string name="sync">Sync</string>
    <string name="sync_no_item">Missing items to sync</string>
    <string name="sync_error">Synchronization error</string>
    <string name="sync_serv_unavailable">Server unavailable</string>
    <string name="sync_elements">Synced: %d elements</string>
    <string name="write_comment">Enter a comment...</string>
</resources>