<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PhotoDescriptionActivity"
    android:background="@drawable/vert_description">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/LinerLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="45"
                android:gravity="center"
                android:visibility="visible"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:padding="5dp"
                android:hint="@string/enterName"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/kingdomType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:padding="15dp"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="62"
                android:background="#FFFFFF"
                android:hint="@string/enterDescription"
                android:gravity="start"
                android:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/longitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/longitude"
            android:background="#66FFFFFF"
            android:padding="5dp"
            android:text="@string/longitude"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="#66FFFFFF"
            android:padding="5dp"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/latitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/latitude"
            android:layout_marginTop="30sp"
            android:background="#66FFFFFF"
            android:padding="5dp"
            android:text="@string/latitude"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30sp"
            android:background="#66FFFFFF"
            android:padding="5dp"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd ="false"
            android:layout_alignParentBottom = "true"
            android:alpha="0.80"
            app:backgroundTint="#199589"
            android:onClick="onCancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd ="true"
            android:layout_alignParentBottom="true"
            android:alpha="0.80"
            app:backgroundTint="#199589"
            android:onClick="onSave"
            android:text="@string/save" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


