<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vert_description"
    tools:context=".view.MapViewActivity"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/LinerLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:gravity="center"
                android:scaleType="centerCrop"
                android:visibility="visible"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:hint="@string/enterName"
                android:padding="5dp"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/kingdomType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:gravity="start"
                android:hint="@string/enterDescription"
                android:padding="5dp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:weightSum="5">

                <EditText
                    android:id="@+id/comment_text_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="@string/write_comment" />

                <ImageButton
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="addComment"
                    android:src="@drawable/send" />

            </LinearLayout>

        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/button6"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:onClick="scroll"-->
<!--            android:text="Button" />-->

        <TextView
            android:id="@+id/longitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/longitude"
            android:background="#66FFFFFF"
            android:padding="5dp"
            android:text="@string/longitude"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="#66FFFFFF"
            android:padding="5dp"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/latitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_toStartOf="@id/latitude"
            android:background="#66FFFFFF"
            android:padding="5dp"
            android:text="@string/latitude"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30sp"
            android:background="#66FFFFFF"
            android:padding="5dp"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
